[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Board.gd" type="Script" id=2]
[ext_resource path="res://src/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/cells.png" type="Texture" id=4]

[sub_resource type="TileSet" id=1]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "cells.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "cells.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="Main" type="Node"]

[node name="Board" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
script = ExtResource( 2 )
grid_size = Vector2( 90, 50 )

[node name="HUD" parent="Board" instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="Board"]
anchor_mode = 0
current = true
offset_h = 1.0
offset_v = 1.0

[node name="GenerationTimer" type="Timer" parent="Board"]
wait_time = 0.5
[connection signal="clear_matrix" from="Board/HUD" to="Board" method="clear_matrix"]
[connection signal="next_generation" from="Board/HUD" to="Board" method="update_next_generation"]
[connection signal="next_generation_speed" from="Board/HUD" to="Board" method="update_generation_speed"]
[connection signal="randomize_matrix" from="Board/HUD" to="Board" method="randomize_matrix"]
[connection signal="start" from="Board/HUD" to="Board" method="handle_start_button"]
[connection signal="stop" from="Board/HUD" to="Board" method="handle_stop_button"]
[connection signal="zoom_value_changed" from="Board/HUD" to="Board" method="zoom_value_changed"]
[connection signal="timeout" from="Board/GenerationTimer" to="Board" method="_on_GenerationTimer_timeout"]
